--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="menu_todo">Todo</string>
+    <string name="menu_barato">Barato</string>
+    <string name="menu_lujoso">Lujoso</string>
+
 </resources>
