--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
-    <string name="app_name">PrimeraAppBSD</string>
+    <string name="app_name">Tour</string>
 
     <string name="hello_world">Hello world!</string>
+    <string name="menu_settings">Settings</string>
     <string name="action_settings">Settings</string>
     <string name="menu_todo">Todo</string>
     <string name="menu_barato">Barato</string>
