--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,7 @@
     <string name="menu_todo">Todo</string>
     <string name="menu_barato">Barato</string>
     <string name="menu_lujoso">Lujoso</string>
+    <string name="menu_add">Agregar a Mis Tours</string>
+    <string name="menu_mistours">Mis  Tours</string>
 
 </resources>
